Fix headline align

--- a/frontend/src/app/pages/common/landing-page/landing-page.component.scss
+++ b/frontend/src/app/pages/common/landing-page/landing-page.component.scss
@@ -4,6 +4,7 @@
 
   h1 {
     margin-bottom: 1rem;
+    text-align: left;
   }
 
   h2 {
